[gd_scene load_steps=2 format=3 uid="uid://b8plclxwl7ho5"]

[ext_resource type="Script" path="res://utils/event/request_event.gd" id="1_vxhrs"]

[node name="RequestEvent" type="VBoxContainer" groups=["events"]]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_vxhrs")

[node name="AvatarAndName" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Avatar" type="TextureRect" parent="AvatarAndName"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
expand_mode = 1

[node name="Name" type="Label" parent="AvatarAndName"]
unique_name_in_owner = true
layout_mode = 2
text = "名字"

[node name="Desc" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "这里是事件详情！@#￥%……&*（）"
fit_content = true
autowrap_mode = 0

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Accept" type="Button" parent="Buttons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "接受"

[node name="Known" type="Button" parent="Buttons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "了解"

[node name="Refuse" type="Button" parent="Buttons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "拒绝"

[node name="Cancel" type="Button" parent="Buttons"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "取消"

[connection signal="pressed" from="Buttons/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="Buttons/Known" to="." method="_on_known_pressed"]
[connection signal="pressed" from="Buttons/Refuse" to="." method="_on_refuse_pressed"]
[connection signal="pressed" from="Buttons/Cancel" to="." method="_on_cancel_pressed"]
